ide/tree-sitter-athena/grammar.js
    source_file: $ => seq(
      optional(choice($.package_declaration, $.incomplete_package_declaration)),
      repeat(choice($.import_declaration, $.incomplete_import_declaration)),
      choice(
        $.system_declaration,
        repeat1($._representation_declaration),
      ),
    ),

    _representation_declaration: $ => choice(
      $.symbol_declaration,
      $.element_declaration,
      $.profile_declaration,
      $.binding_declaration,
    ),

    package_declaration: $ => seq(
      'package',
      $._header_space,
      field('name', $.package_name),
    ),

    package_name: _ => token.immediate(seq(
      /[A-Za-z_][A-Za-z0-9_]*/,
      repeat(seq('-', /[A-Za-z_][A-Za-z0-9_]*/)),
      repeat(seq(
        '.',
        /[A-Za-z_][A-Za-z0-9_]*/,
        repeat(seq('-', /[A-Za-z_][A-Za-z0-9_]*/)),
      )),
    )),

    _header_space: _ => token.immediate(/[ \t]+/),

    system_declaration: $ => seq(
      'system',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($.declaration),
      optional('}'),
    ),

    declaration: $ => choice(
      $.entity_declaration,
      $.port_declaration,
      $.connect_declaration,
      $.relation_declaration,
      $.evidence_declaration,
      $.projection_policy_declaration,
      $.layout_declaration,
      $.installation_declaration,
    ),

    symbol_declaration: $ => seq(
      'symbol',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._symbol_member),
      optional('}'),
    ),

    _symbol_member: $ => choice(
      $.symbol_identity,
      $.symbol_version,
      $.resource_declaration,
      $.graphic_declaration,
      $.anchor_declaration,
    ),

    symbol_identity: $ => seq(
      'identity',
      field('value', $.string),
    ),

    symbol_version: $ => seq(
      'version',
      field('value', $.string),
    ),

    element_declaration: $ => seq(
      'element',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._element_member),
      optional('}'),
    ),

    _element_member: $ => choice(
      $.element_identity,
      $.element_version,
      $.resource_declaration,
      $.graphic_declaration,
      $.element_bounds,
      $.element_child,
      $.element_export_anchor,
      $.element_export_label,
    ),

    element_identity: $ => seq(
      'identity',
      field('value', $.string),
    ),

    element_version: $ => seq(
      'version',
      field('value', $.string),
    ),

    resource_declaration: $ => seq(
      'resource',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._resource_member),
      '}',
    ),

    _resource_member: $ => choice(
      $.resource_kind,
      $.resource_path,
    ),

    resource_kind: $ => seq(
      'kind',
      'svg',
    ),

    resource_path: $ => seq(
      'path',
      field('value', $.string),
    ),

    element_bounds: $ => seq(
      'bounds',
      field('value', $.bounds_literal),
    ),

    element_child: $ => seq(
      'child',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._element_child_member),
      optional('}'),
    ),

    _element_child_member: $ => choice(
      $.child_symbol_reference,
      $.child_translate,
      $.child_rotate,
      $.child_scale,
      $.child_z_order,
    ),

    child_symbol_reference: $ => seq(
      'symbol',
      field('identity', $.string),
    ),

    child_translate: $ => seq(
      'translate',
      field('value', $.point_literal),
    ),

    child_rotate: $ => seq(
      'rotate',
      field('value', $.number),
    ),

    child_scale: $ => seq(
      'scale',
      field('value', $.point_literal),
    ),

    child_z_order: $ => seq(
      'zOrder',
      field('value', $.number),
    ),

    element_export_anchor: $ => seq(
      'export',
      'anchor',
      field('name', alias($.identifier, $.name)),
      'from',
      field('source', $.qualified_name),
    ),

    element_export_label: $ => seq(
      'export',
      'label',
      field('name', alias($.identifier, $.name)),
      'from',
      field('source', $.qualified_name),
    ),

    graphic_declaration: $ => choice(
      seq(
        'graphic',
        '{',
        repeat($._graphic_member),
        '}',
      ),
      seq(
        'graphic',
        'svg',
        'resource',
        field('resource', $.identifier),
      ),
    ),

    _graphic_member: $ => choice(
      $.graphic_bounds,
      $.line_primitive,
      $.polyline_primitive,
      $.arc_primitive,
      $.circle_primitive,
      $.rectangle_primitive,
      $.label_slot,
    ),

    graphic_bounds: $ => seq(
      'bounds',
      field('value', $.bounds_literal),
    ),

    bounds_literal: $ => seq(
      '(',
      $.number,
      ',',
      $.number,
      ',',
      $.number,
      ',',
      $.number,
      ')',
    ),

    line_primitive: $ => seq(
      'line',
      field('name', alias($.identifier, $.name)),
      'from',
      field('from', $.point_literal),
      'to',
      field('to', $.point_literal),
      $.style_reference,
    ),

    polyline_primitive: $ => seq(
      'polyline',
      field('name', alias($.identifier, $.name)),
      'points',
      field('points', $.point_list),
      $.style_reference,
    ),

    point_list: $ => seq(
      '(',
      commaSep1($.point_literal),
      ')',
    ),

    arc_primitive: $ => seq(
      'arc',
      field('name', alias($.identifier, $.name)),
      'center',
      field('center', $.point_literal),
      'radius',
      field('radius', $.number),
      'from',
      field('start', $.number),
      'sweep',
      field('sweep', $.number),
      $.style_reference,
    ),

    circle_primitive: $ => seq(
      'circle',
      field('name', alias($.identifier, $.name)),
      'center',
      field('center', $.point_literal),
      'radius',
      field('radius', $.number),
      $.style_reference,
    ),

    rectangle_primitive: $ => seq(
      'rectangle',
      field('name', alias($.identifier, $.name)),
      'at',
      field('origin', $.point_literal),
      'size',
      field('size', $.size_literal),
      $.style_reference,
    ),

    label_slot: $ => seq(
      'label',
      field('name', alias($.identifier, $.name)),
      'at',
      field('origin', $.point_literal),
      'size',
      field('size', $.size_literal),
      'role',
      field('role', $.profile_value_name),
      $.style_reference,
    ),

    style_reference: $ => seq(
      'style',
      field('name', $.profile_value_name),
    ),

    anchor_declaration: $ => seq(
      'anchor',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._anchor_member),
      '}',
    ),

    _anchor_member: $ => choice(
      $.primitive_reference,
      $.anchor_port,
      $.anchor_point,
      $.anchor_role,
      $.anchor_direction,
      $.anchor_signal,
    ),

    primitive_reference: $ => seq(
      'ref',
      field('target', $.string),
    ),

    anchor_point: $ => seq(
      'point',
      field('value', $.point_literal),
    ),

    anchor_role: $ => seq(
      'role',
      field('value', $.identifier),
    ),

    anchor_direction: $ => seq(
      'direction',
      field('value', $.direction_name),
    ),

    direction_name: _ => token(prec(1, /(?:in|out|bidirectional)/)),

    anchor_signal: $ => seq(
      'signal',
      field('value', $.qualified_name),
    ),

    point_literal: $ => seq(
      '(',
      $.number,
      ',',
      $.number,
      ')',
    ),

    size_literal: $ => seq(
      '(',
      $.number,
      ',',
      $.number,
      ')',
    ),

    profile_declaration: $ => seq(
      'profile',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._profile_member),
      optional('}'),
    ),

    _profile_member: $ => choice(
      $.profile_projection,
      $.profile_standard,
      $.profile_style,
      $.profile_fallback,
    ),

    profile_projection: $ => seq(
      'projection',
      field('value', $.profile_value_name),
    ),

    profile_standard: $ => seq(
      'standard',
      field('value', $.profile_value_name),
    ),

    profile_style: $ => seq(
      'style',
      field('value', $.profile_value_name),
    ),

    profile_fallback: $ => seq(
      'fallback',
      field('value', $.profile_value_name),
    ),

    profile_value_name: _ => token(/[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z_][A-Za-z0-9_]*)*/),

    binding_declaration: $ => seq(
      'binding',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._binding_member),
      optional('}'),
    ),

    _binding_member: $ => choice(
      $.binding_profile,
      $.binding_priority,
      $.binding_select,
      $.binding_use_element,
      $.binding_variant,
    ),

    binding_profile: $ => seq(
      'profile',
      field('target', $.identifier),
    ),

    binding_priority: $ => seq(
      'priority',
      field('value', $.number),
    ),

    binding_select: $ => seq(
      'select',
      field('subject_kind', $.binding_subject_kind),
      'where',
      '{',
      repeat($.property_assignment),
      optional('}'),
    ),

    binding_subject_kind: _ => choice('entity', 'function'),

    binding_use_element: $ => seq(
      'use',
      'element',
      field('identity', $.string),
      'version',
      field('version', $.string),
    ),

    binding_variant: $ => seq(
      'variant',
      field('value', $.string),
    ),

    entity_declaration: $ => seq(
      'entity',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._entity_member),
      optional('}'),
    ),

    _entity_member: $ => choice(
      $.interface_declaration,
      $.property_assignment,
      $.nested_port_declaration,
      $.function_declaration,
      $.structure_assignment,
    ),

    qualified_name: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    ),

    property_assignment: $ => seq(
      alias($.identifier, $.property_name),
      $._scalar_value,
    ),

    _scalar_value: $ => choice(
      $.quantity,
      $.boolean,
      $.reference_value,
      $.identifier,
      $.string,
      $.number,
    ),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

    number: _ => /-?[0-9]+(?:\.[0-9]+)?/,

    string: $ => seq(
      '"',
      optional($.string_content),
      '"',
    ),

    string_content: $ => /[^"\r\n]+/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
