ide/tree-sitter-athena/test/corpus/system.txt
============================
Valid system with entity
============================

system Demo {
  entity PLC1 {
    concept Switch
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (entity_declaration
        name: (name)
        (property_assignment
          (property_name)
          (identifier))))))
